<resources>
    <string name="app_name" translatable="false">DuAn1_QlyNuocHoa</string>


    <!--Activity Login In-->
    <string name="login_password">Password</string>
    <string name="login_user">Username</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_with_fb">Login sign with facebook</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="title_activity_nav__home">Nav_HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
