<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/poster"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_blue_white"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/img_logo"
        android:background="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@+id/img_logo"
        android:orientation="vertical"

        android:paddingLeft="40dp"
        android:paddingRight="40dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user"
                android:drawablePadding="15dp"
                android:id="@+id/edEmail"
                android:textColorLink="@android:color/white"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:paddingLeft="5dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:drawablePadding="15dp"
                android:id="@+id/edPass"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:paddingLeft="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_login"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/btnSignFB"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/login_sign_with_fb"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:id="@+id/tvSignUp"
            android:textColor="@android:color/white"
            android:text="@string/login_sign_up"/>
    </LinearLayout>
</RelativeLayout>